5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1807_2564.log
== TEST (2019-06-06 16:16:48) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:49) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=derrota
vetor[1]=empate
vetor[2]=vitoria

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:18:20) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=derrota
vetor[1]=empate
vetor[2]=vitoria

print(vetor)
-- EXECUTION TIME:
1.03868
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:18:31) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=derrota
vetor[1]=empate
vetor[2]=vitoria

print(vetor)
-- EXECUTION TIME:
2.09878
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:18:31) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=derrota
vetor[1]=empate
vetor[2]=vitoria

print(vetor)
-- EXECUTION TIME:
2.8953
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:19:24) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
0.739987
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:19:45) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
1.61773
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:19:46) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
3.33088
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:19:46) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
5.35628
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:19:46) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
7.80347
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:19:46) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
8.54374
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:19:46) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
9.40444
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[13  0  0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:19:48) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(2, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:04) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:49) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:24:10) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:25:47) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:27:23) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
1.86583
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:27:23) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
2.78702
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:41:53) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

for i in gols:
	
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
		
	elif(gols[i]==tomou[i]):
		empate=empate+1

vetor=zeros(3, dtype=int)

vetor[0]=vitoria
vetor[1]=empate
vetor[2]=derrota

print(vetor)
-- EXECUTION TIME:
1.21764
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:47:46) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

i=0

while(i < size(gols):
		if(gols[i]>tomou[i]):
			vitoria=vitoria+1
		elif(gols[i]<tomou[i]):
			derrota=derrota+1
		elif(gols[i]==tomou[i]):
			empate=empate+1
		
		i=i+1
		
vet=zeros(3, dtype=int)		
		
vet[0]=vitoria
vet[1]=empate
vet[2]=derrota		
-- ERROR:
File "XXXX", line 14
    while(i < size(gols):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:48:01) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

i=0

while(i < size(gols)):
		if(gols[i]>tomou[i]):
			vitoria=vitoria+1
		elif(gols[i]<tomou[i]):
			derrota=derrota+1
		elif(gols[i]==tomou[i]):
			empate=empate+1
		
		i=i+1
		
vet=zeros(3, dtype=int)		
		
vet[0]=vitoria
vet[1]=empate
vet[2]=derrota		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:48:31) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

i=0

while(i < size(gols)):
		if(gols[i]>tomou[i]):
			vitoria=vitoria+1
		elif(gols[i]<tomou[i]):
			derrota=derrota+1
		elif(gols[i]==tomou[i]):
			empate=empate+1
		
		i=i+1
		
vet=zeros(3, dtype=int)		
		
vet[0]=vitoria
vet[1]=empate
vet[2]=derrota		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:48:42) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0

i=0

while(i < size(gols)):
		if(gols[i]>tomou[i]):
			vitoria=vitoria+1
		elif(gols[i]<tomou[i]):
			derrota=derrota+1
		elif(gols[i]==tomou[i]):
			empate=empate+1
		
		i=i+1
		
vet=zeros(3, dtype=int)		
		
vet[0]=vitoria
vet[1]=empate
vet[2]=derrota		

print(vet)
-- EXECUTION TIME:
1.13361
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:25:19) 
-- CODE:
from numpy import *

gols=array(eval(input("Gols por partida: ")))

tomou=array(eval(input("Gols tomados por partida: ")))


vitoria=0
empate=0
derrota=0



for i in range(size(gols)):
	if(gols[i]>tomou[i]):
		vitoria=vitoria+1
	elif(gols[i]<tomou[i]):
		derrota=derrota+1
	elif(gols[i]==tomou[i]):
		empate=empate+1
		
	
		
vet=zeros(3, dtype=int)		
		
vet[0]=vitoria
vet[1]=empate
vet[2]=derrota		

print(vet)
-- EXECUTION TIME:
1.03566
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
